--- a/celebritydating.html
+++ b/celebritydating.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.6.0.js"></script>
+  <script src="js/scripts.js"></script>
+  
   <title>Celebrity Dating Quiz</title>
 </head>
 <body>
   <div class="container">
-    <div id="drinks"></div>
-      <h1>Celebrity Dating Quiz!</h1>
-
+    <h1>Celebrity Dating Quiz!</h1>
+    <form>
         <h2>In my free time I...</h2>
           <select id="hobby">
             <option>Playing guitar</option>
@@ -25,19 +29,18 @@
             <option>Pop</option>
           </select>
 
-        <h2>Gender...</h2>
+        <h2>Gender preference</h2>
           <select id="gender">
-            <option></option>
-            <option></option>
-            <option></option>
+            <option>Male</option>
+            <option>Female</option>
+            <option>Either/or</option>
           </select>
+
         
+        <button type="submit" class="btn btn-dark">Show me the result</button>
         
-      </div>
+    </form>
 
-
-
-  
 </div>
   
 </body>
