--- a/celebritydating.html
+++ b/celebritydating.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <h1>Celebrity Dating Quiz!</h1>
-    <form>
+    <form id="formCeleb">
         <h2>In my free time I...</h2>
           <select id="hobby">
             <option>Playing guitar</option>
@@ -40,6 +40,10 @@
         <button type="submit" class="btn btn-dark">Show me the result</button>
         
     </form>
+
+    <div id="resultCeleb">
+      TEST DIV
+    </div>
 
 </div>
   
